# snarkVM

./: Cargo.toml
console/: Cargo.toml
console/account/src/signature/: sign.rs  verify.rs
console/program/src/: lib.rs
console/program/src/data/identifier/: mod.rs
console/program/src/data/plaintext/: to_fields.rs
console/program/src/data/record/: encrypt.rs  to_fields.rs
console/program/src/request/: mod.rs  sign.rs
console/program/src/response/: mod.rs
console/src/: lib.rs
ledger/narwhal/batch-header/src/: lib.rs
sig-generation/: Cargo.toml
sig-generation/src/: main.rs
synthesizer/process/src/: authorize.rs  lib.rs
synthesizer/process/src/stack/: authorize.rs  execute.rs  mod.rs
synthesizer/process/src/stack/authorization/: mod.rs
synthesizer/process/src/stack/register_types/: initialize.rs
synthesizer/program/src/logic/instruction/operation/: sign_verify.rs
synthesizer/src/vm/: mod.rs  verify.rs
vm/cli/: cli.rs
vm/cli/commands/: execute.rs  frost_execute.rs  message.rs  mod.rs
vm/package/: execute.rs  frost_execute.rs  message.rs  mod.rs
